--- a/stely.css
+++ b/stely.css
@@ -1,7 +1,7 @@
-function setup() {
-    createCanvas(400, 400);
-  }
-  
-  function draw() {
-    background(220);
-  }
+html, body {
+  margin: 0;
+  padding: 0;
+}
+canvas {
+  display: block;
+}
